Update grid layout support
- Update gap property for wider support

--- a/css/heros/articles/meet-the-metaverse.scss
+++ b/css/heros/articles/meet-the-metaverse.scss
@@ -107,7 +107,7 @@
     .content {
       display: grid;
       grid-template-columns: 1fr 2fr;
-      gap: 2.6em;
+      grid-gap: 2.6em;
     }
     .image,
     .text {
