--- a/_includes/heros/articles/meet-the-metaverse.html
+++ b/_includes/heros/articles/meet-the-metaverse.html
@@ -1,5 +1,6 @@
 <link rel="preload" href="{{ site.url }}/css/heros/articles/meet-the-metaverse.css?{{ site.time | date:'%s' }}">
 <link rel="stylesheet" href="{{ site.url }}/css/heros/articles/meet-the-metaverse.css?{{ site.time | date:'%s' }}">
+<link rel="preload" href="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-1280w.jpg?{{ site.time | date:'%s' }}" as="image">
 <article class="hero-promo">
   <div class="container">
     <div class="content">
