--- a/_sass/_migrated-main.scss
+++ b/_sass/_migrated-main.scss
@@ -34377,35 +34377,43 @@ section.outside-app .text-me-fragment h1 {
   content: "";
   font-family: FontAwesome;
 }
-.course-content .bookmark-icon.bookmarked {
-  right: 5px;
-  top: -3px;
-  position: absolute;
+.course-content {
+  .bookmark-icon.bookmarked {
+    right: 5px;
+    top: -3px;
+    position: absolute;
+  }
+  .bookmark-button-wrapper {
+    margin-bottom: 30px;
+  }
+  .bookmark-button::before {
+    padding-right: 5px;
+    content: "";
+    font-family: FontAwesome;
+  }
+  .bookmark-button.bookmarked::before {
+    content: "";
+  }
 }
-.course-content .bookmark-button-wrapper {
-  margin-bottom: 30px;
+.learner-achievements {
+  .learner-message {
+    margin: 15px 0;
+
+    .message-header,
+    .message-actions {
+      text-align: center;
+    }
+    .message-actions {
+      margin-top: 10px;
+
+      .btn-brand {
+        color: #fff;
+      }
+    }
+  }
 }
-.course-content .bookmark-button::before {
-  padding-right: 5px;
-  content: "";
-  font-family: FontAwesome;
-}
-.course-content .bookmark-button.bookmarked::before {
-  content: "";
-}
-.learner-achievements .learner-message {
-  margin: 15px 0;
-}
-.learner-achievements .learner-message .message-header,
-.learner-achievements .learner-message .message-actions {
-  text-align: center;
-}
-.learner-achievements .learner-message .message-actions {
-  margin-top: 10px;
-}
-.learner-achievements .learner-message .message-actions .btn-brand {
-  color: #fff;
-}
+
+
 .certificate-card {
   display: flex;
   flex-direction: row;
@@ -38796,474 +38804,7 @@ section.outside-app .wrapper-account-settings h1.header-title {
   margin: 0;
   padding: 0;
 }
-div.xmodule_display.xmodule_CapaModule div.problem div span.incorrect,
-div.xmodule_display.xmodule_CapaModule div.problem div span.incomplete,
-div.xmodule_display.xmodule_CapaModule div.problem div span.ui-icon-close,
-div.xmodule_display.xmodule_CapaModule div.problem div span.correct,
-div.xmodule_display.xmodule_CapaModule div.problem div span.ui-icon-check {
-  background: none;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .action .gym-button,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-actions-wrapper
-  .entitlement-action
-  .gym-button,
-.entitlement-actions-wrapper
-  div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-action
-  .gym-button {
-  margin-left: 0;
-  height: 3em;
-  display: inline-block;
-  align-items: inherit;
-  vertical-align: top;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .action .gym-button.save,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-actions-wrapper
-  .entitlement-action
-  .gym-button.save,
-.entitlement-actions-wrapper
-  div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-action
-  .gym-button.save {
-  margin-right: 10px;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .action .gym-button.show,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-actions-wrapper
-  .entitlement-action
-  .gym-button.show,
-.entitlement-actions-wrapper
-  div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-action
-  .gym-button.show {
-  display: inline-block !important;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .action .gym-button:focus,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-actions-wrapper
-  .entitlement-action
-  .gym-button:focus,
-.entitlement-actions-wrapper
-  div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-action
-  .gym-button:focus {
-  box-shadow: none;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .action span,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-actions-wrapper
-  .entitlement-action
-  span,
-.entitlement-actions-wrapper
-  div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .entitlement-action
-  span {
-  display: inline-block;
-}
-div.xmodule_display.xmodule_CapaModule div.problem div span.unanswered {
-  display: none;
-  visibility: hidden;
-}
-div.xmodule_display.xmodule_CapaModule div.problem div span.incorrect:before,
-div.xmodule_display.xmodule_CapaModule div.problem div span.incomplete:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  div
-  span.ui-icon-close:before {
-  font: 900 2.4em/1 $gym-font-stack;
-  content: "×";
-  color: #f33;
-}
-div.xmodule_display.xmodule_CapaModule div.problem div span.correct:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  div
-  span.ui-icon-check:before {
-  font: 900 1.4em/1 $gym-font-stack;
-  content: "✔";
-  color: #3c3;
-  display: block;
-  margin-left: -1em;
-  margin-top: 0.4em;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .choicegroup label,
-div.xmodule_display.xmodule_CapaModule div.problem .choicetextgroup label {
-  margin-bottom: 0;
-}
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_incorrect,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_incorrect,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_incorrect,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_incorrect,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_incorrect,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_incorrect,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_correct {
-  border: none;
-}
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_incorrect:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_incorrect:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_incorrect:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_correct:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_correct:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_correct:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_incorrect:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_incorrect:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_incorrect:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_correct:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_correct:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_correct:hover {
-  border: none;
-}
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_incorrect:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_incorrect:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_incorrect:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_correct:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_correct:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_correct:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_incorrect:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_incorrect:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_incorrect:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_correct:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_correct:after,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_correct:after {
-  display: none;
-}
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_incorrect:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_incorrect:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_incorrect:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_incorrect:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_incorrect:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_incorrect:before {
-  position: absolute;
-  font: 900 2.4em/1 $gym-font-stack;
-  content: "×";
-  color: #f33;
-  margin-top: 2px;
-  margin-left: -1.3em;
-}
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicegroup_correct:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  label.choicetextgroup_correct:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  section.choicetextgroup_correct:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicegroup_correct:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  label.choicetextgroup_correct:before,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  section.choicetextgroup_correct:before {
-  position: absolute;
-  font: 900 1.4em/1 $gym-font-stack;
-  content: "✔";
-  color: #3c3;
-  margin-top: 7px;
-  margin-left: -2.3em;
-}
-div.xmodule_display.xmodule_CapaModule div.problem p {
-  margin-bottom: 0;
-  font-size: 16px;
-}
-div.xmodule_display.xmodule_CapaModule div.problem fieldset input[type="radio"],
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  fieldset
-  input[type="checkbox"],
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  input[type="radio"],
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  input[type="checkbox"],
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  input[type="radio"],
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  input[type="checkbox"] {
-  position: relative;
-  left: -1em;
-  font-size: 1.8em;
-  margin-right: -0.8em;
-  top: 1px;
-}
-div.xmodule_display.xmodule_CapaModule div.problem fieldset fieldset,
-div.xmodule_display.xmodule_CapaModule div.problem .choicegroup fieldset,
-div.xmodule_display.xmodule_CapaModule div.problem .choicetextgroup fieldset {
-  padding-left: 0;
-  border: none;
-  margin-bottom: 1.2em;
-  width: 100%;
-}
-div.xmodule_display.xmodule_CapaModule div.problem fieldset fieldset label,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  fieldset
-  fieldset
-  label.choicegroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  fieldset
-  fieldset
-  label:hover,
-div.xmodule_display.xmodule_CapaModule div.problem .choicegroup fieldset label,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  fieldset
-  label.choicegroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicegroup
-  fieldset
-  label:hover,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  fieldset
-  label,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  fieldset
-  label.choicegroup_correct,
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .choicetextgroup
-  fieldset
-  label:hover {
-  border: none;
-}
-div.xmodule_display.xmodule_CapaModule div.problem label {
-  display: block;
-  font: 1em/1.5 $gym-text-font-stack;
-  color: #444;
-  margin-top: 0;
-  margin-left: 1.6em;
-  width: 100%;
-}
-div.xmodule_display.xmodule_CapaModule div.problem pre {
-  padding: 1em;
-}
-div.xmodule_display.xmodule_CapaModule div.problem pre code {
-  font-size: 1em;
-  font-family: monospace;
-}
-div.xmodule_display.xmodule_CapaModule div.problem pre code span {
-  font-size: 1em;
-  font-family: monospace;
-}
-div.xmodule_display.xmodule_CapaModule div.problem code {
-  padding: 5px;
-  font-size: 0.85em;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .solution-span > span {
-  background: #ebebeb;
-  padding: 1.8em;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-}
-div.xmodule_display.xmodule_CapaModule
-  div.problem
-  .solution-span
-  > span
-  p:first-child {
-  font: 900 1em/1.3 $gym-font-stack;
-  color: #222;
-  letter-spacing: 0.02em;
-  word-spacing: 0.02em;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-div.xmodule_display.xmodule_CapaModule div.problem .solution-span > span p {
-  font: 1em/1.5 $gym-text-font-stack;
-  color: #444;
-  margin-top: 0.84em;
-  margin-left: 0;
-}
-div.xmodule_display.xmodule_CapaModule div.problem-progress {
-  font: 1em/1.5 $gym-font-stack;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  word-spacing: 0.02em;
-  color: #222;
-}
-div.xmodule_display.xmodule_CapaModule div.problem > div > strong {
-  display: block;
-  font: bold 1.2em/1.4 $gym-font-stack;
-  color: #222;
-  letter-spacing: 0.02em;
-  word-spacing: 0.04em;
-  padding-top: 1.5em;
-  padding-left: 0;
-  border-top: 1px solid #ddd;
-  margin-top: 1.5em;
-}
-div.xmodule_display.xmodule_CapaModule div.problem div span.incorrect,
-div.xmodule_display.xmodule_CapaModule div.problem div span.incomplete,
-div.xmodule_display.xmodule_CapaModule div.problem div span.ui-icon-close {
-  top: -1.55em;
-  left: -1.7em;
-}
+
 .courseware-bookmarks-button {
   width: inherit;
   margin: 1em 0;
