--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -158,7 +158,6 @@
         background-color: inherit;
 
         .chapter-menu {
-
           display: none;
           padding: 0 14px 0 30px;
           overflow: hidden;
@@ -178,7 +177,6 @@
             }
 
             .accordion-nav {
-
               background: inherit;
               border: none;
               position: relative;
@@ -266,12 +264,30 @@
 .course-wrapper main {
   padding: 20px;
 
-  .hd-1, .hd-2, .hd-3, .hd-4, .hd-5, .hd-6, .hd-7, .hd-8 {
+  .hd-1,
+  .hd-2,
+  .hd-3,
+  .hd-4,
+  .hd-5,
+  .hd-6,
+  .hd-7,
+  .hd-8 {
     margin: 0;
     font-weight: 400;
     font-size: inherit;
     line-height: inherit;
     color: #474747;
+  }
+
+  .hd-3 {
+    margin-bottom: 10px;
+  }
+
+  h2 {
+    font-weight: 600;
+    text-transform: initial;
+    font-size: 1.5em;
+    line-height: 1.4em;
   }
 }
 
@@ -291,5 +307,222 @@
   &:hover {
     color: #fff;
     background-color: $gym-dark-gray-2;
+  }
+}
+
+// Staff Debug Info
+.course-content .vert {
+  padding: 0 0 15px;
+}
+
+// Exam Fixes
+.course-content {
+  .problem {
+    ul {
+      padding-left: 1em;
+      list-style: disc outside none;
+
+      li {
+        margin-bottom: 0.70788em;
+        line-height: 1.4em;
+      }
+    }
+
+    fieldset input[type="radio"],
+    fieldset input[type="checkbox"],
+    .choicegroup input[type="radio"],
+    .choicegroup input[type="checkbox"],
+    .choicetextgroup input[type="radio"],
+    .choicetextgroup input[type="checkbox"] {
+      position: relative;
+      left: -1em;
+      font-size: 1.8em;
+      margin-right: -0.8em;
+      top: 1px;
+    }
+    fieldset fieldset,
+    .choicegroup fieldset,
+    .choicetextgroup fieldset {
+      padding-left: 0;
+      border: none;
+      margin-bottom: 1.2em;
+      width: 100%;
+    }
+
+    label {
+      display: block;
+      font: 1em/1.5 $gym-text-font-stack;
+      color: #444;
+      margin-top: 0;
+      margin-left: 1.6em;
+      width: 100%;
+    }
+    pre {
+      padding: 1em;
+    }
+    pre code {
+      font-size: 1em;
+      font-family: monospace;
+    }
+    pre code span {
+      font-size: 1em;
+      font-family: monospace;
+    }
+    code {
+      padding: 5px;
+      font-size: 0.85em;
+    }
+    .solution-span > span {
+      background: #ebebeb;
+      padding: 1.8em;
+      border: 1px solid #ccc;
+      border-radius: 2px;
+    }
+    .solution-span > span p:first-child {
+      font: 900 1em/1.3 $gym-font-stack;
+      color: #222;
+      letter-spacing: 0.02em;
+      word-spacing: 0.02em;
+      text-transform: uppercase;
+      margin-top: 0;
+      margin-bottom: 1em;
+    }
+    .solution-span > span p {
+      font: 1em/1.5 $gym-text-font-stack;
+      color: #444;
+      margin-top: 0.84em;
+      margin-left: 0;
+    }
+    div.xmodule_display.xmodule_CapaModule div.problem-progress {
+      font: 1em/1.5 $gym-font-stack;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      word-spacing: 0.02em;
+      color: #222;
+    }
+    > div > strong {
+      display: block;
+      font: bold 1.2em/1.4 $gym-font-stack;
+      color: #222;
+      letter-spacing: 0.02em;
+      word-spacing: 0.04em;
+      padding-top: 1.5em;
+      padding-left: 0;
+      border-top: 1px solid #ddd;
+      margin-top: 1.5em;
+    }
+    div span.incorrect,
+    div span.incomplete,
+    div span.ui-icon-close {
+      top: -1.55em;
+      left: -1.7em;
+    }
+
+    .choicetextgroup label,
+    .choicegroup label {
+      padding: 10px;
+      padding-left: 38px;
+      position: relative;
+      font-size: 1em;
+      line-height: normal;
+      cursor: pointer;
+      box-sizing: border-box;
+      display: inline-block;
+      clear: both;
+      border: none;
+      // border-radius: 3px;
+      width: 100%;
+      margin-bottom: 0;
+
+      &:hover {
+        border: none;
+      }
+
+      &:after {
+        display: none;
+      }
+    }
+
+    .choicegroup label[class*="_incorrect"]:before,
+    .choicegroup section[class*="_incorrect"]:before {
+      position: absolute;
+      font: 900 2.4em/1 $gym-font-stack;
+      content: "×";
+      color: #f33;
+      margin-top: 2px;
+      margin-left: -1.3em;
+    }
+
+    .choicegroup label[class*="_correct"]:before,
+    .choicegroup section[class*="_correct"]:before {
+      position: absolute;
+      font: 900 1.4em/1 $gym-font-stack;
+      content: "✔";
+      color: #3c3;
+      margin-top: 7px;
+      margin-left: -2.3em;
+
+      p {
+        margin-bottom: 0;
+        font-size: 16px;
+      }
+    }
+
+    div span {
+      &.incorrect,
+      &.incomplete,
+      &.ui-icon-close,
+      &.correct,
+      &.ui-icon-check {
+        background: none;
+      }
+    }
+
+    .gym-button {
+      margin-left: 0;
+      height: 3em;
+      display: inline-block;
+      align-items: inherit;
+      vertical-align: top;
+
+      &.save {
+        margin-right: 10px;
+      }
+
+      &.show {
+        display: inline-block !important;
+      }
+
+      &:focus {
+        box-shadow: none;
+      }
+    }
+
+    .entitlement-action span {
+      display: inline-block;
+    }
+
+    span.unanswered {
+      display: none;
+      visibility: hidden;
+    }
+
+    span.incorrect:before,
+    span.incomplete:before,
+    span.ui-icon-close:before {
+      font: 900 2.4em/1 $gym-font-stack;
+      content: "×";
+      color: #f33;
+    }
+
+    span.correct:before,
+    span.ui-icon-check:before {
+      font: 900 1.4em/1 $gym-font-stack;
+      content: "✔";
+      color: #3c3;
+      display: block;
+      margin-left: -1em;
+      margin-top: 0.4em;
+    }
   }
 }
