--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -378,27 +378,38 @@
       padding: 5px;
       font-size: 0.85em;
     }
+    
     .solution-span > span {
       background: #ebebeb;
       padding: 1.8em;
       border: 1px solid #ccc;
       border-radius: 2px;
+      margin: 20px 0;
+      display: block;
+      position: relative
+
+      &:empty {
+        display: none
+      }
+
+      p {
+        font: 1em/1.5 $gym-text-font-stack;
+        color: #444;
+        margin-top: 0.84em;
+        margin-left: 0;
+
+        &:first-child {
+          font: 900 1em/1.3 $gym-font-stack;
+          color: #222;
+          letter-spacing: 0.02em;
+          word-spacing: 0.02em;
+          text-transform: uppercase;
+          margin-top: 0;
+          margin-bottom: 1em;
+        }
+      }
     }
-    .solution-span > span p:first-child {
-      font: 900 1em/1.3 $gym-font-stack;
-      color: #222;
-      letter-spacing: 0.02em;
-      word-spacing: 0.02em;
-      text-transform: uppercase;
-      margin-top: 0;
-      margin-bottom: 1em;
-    }
-    .solution-span > span p {
-      font: 1em/1.5 $gym-text-font-stack;
-      color: #444;
-      margin-top: 0.84em;
-      margin-left: 0;
-    }
+
     .problem-progress {
       font: 1em/1.5 $gym-font-stack;
       text-transform: uppercase;
@@ -418,7 +429,7 @@
       border-top: 1px solid #ddd;
       margin-top: 1.5em;
     }
-    
+
     div span.incorrect,
     div span.incomplete,
     div span.ui-icon-close {
