Add missing border for code

--- a/css/main.scss
+++ b/css/main.scss
@@ -2457,6 +2457,9 @@ aside.system-status {
     white-space: pre-wrap;
     padding: 0.125rem 0.5rem;
     margin: 0;
+    border: 1px solid #eaeaea;
+    border-radius: 3px;
+    background-color: #f8f8f8;
   }
 
   pre code {
