--- a/_sass/_migrated-fixes.scss
+++ b/_sass/_migrated-fixes.scss
@@ -315,8 +315,26 @@
   padding: 0 0 15px;
 }
 
-// Exam Fixes
+// Exam/Quiz/Homework Fixes
 .course-content {
+
+  ul, ol {
+    padding: 0 0 0 40px;
+  }
+
+  ul {
+    padding-left: 1em;
+    list-style: disc outside none;
+    margin-bottom: 1.41575em;
+    margin-left: 0.75rem;
+
+    li {
+      margin-bottom: 0.70788em;
+      line-height: 1.4em;
+    }
+  }
+
+  // Exam/Quiz
   .problem {
 
     // exam submit buttons
@@ -351,22 +369,6 @@
         &:last-child {
           border: none;
         }
-      }
-    }
-
-    ul, ol {
-      padding: 0 0 0 40px;
-    }
-
-    ul {
-      padding-left: 1em;
-      list-style: disc outside none;
-      margin-bottom: 1.41575em;
-      margin-left: 0.75rem;
-
-      li {
-        margin-bottom: 0.70788em;
-        line-height: 1.4em;
       }
     }
 
