--- a/css/forum-hacks.scss
+++ b/css/forum-hacks.scss
@@ -1,3 +1,6 @@
-// Please update the scss/_migrated-forum.scss partial
+---
+---
+
+// Please update the ./scss/_migrated-forum.scss partial instead of this
 
 @import 'migrated-forum';
