--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -722,9 +722,9 @@
 // }
 // .fa-navicon:before,
 // .fa-reorder:before,
-// .fa-bars:before {
-//   content: "\f0c9";
-// }
+.fa-bars:before {
+  content: "\f0c9";
+}
 // .fa-list-ul:before {
 //   content: "\f0ca";
 // }
