--- a/_sass/_migrated-forum.scss
+++ b/_sass/_migrated-forum.scss
@@ -100,3 +100,188 @@
 }
 
 
+
+.discussion-column {
+  font-weight: 700;
+  flex-grow: 1;
+  margin-left: 20px;
+  min-height: 500px;
+  margin-bottom: 0;
+  width: 75%;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 20px;
+}
+
+.forum-nav {
+  display: block;
+  max-width: 300px;
+  width: 25%;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
+.forum-nav-browse-menu-wrapper {
+  border-bottom: 1px solid #d9d9d9;
+  background: #e7e7e7;
+}
+
+.forum-nav-browse-filter {
+  position: relative;
+  border-bottom: 1px solid #d9d9d9;
+  padding: 5px;
+
+  label {
+    margin-bottom: 0;
+    width: 100%;
+  }
+
+  .forum-nav-browse-filter-input {
+    font-size: 12px;
+  }
+}
+
+/* ---
+Discussion Forum Related
+TODO: migrate discussion CSS out of theme
+--- */
+#discussion-container {
+  span.forum-nav-browse-menu,
+  .view-discussion-home .helpgrid-row th.row-title,
+  .view-discussion-home .helpgrid-row .row-item-full,
+  .view-discussion-home .helpgrid-row td.row-item,
+  span.label.label-settings,
+  ul.forum-nav-browse-menu li,
+  ul.forum-nav-browse menu li.forum-nav-browse-menu-item,
+  ul.forum-nav-browse menu li.forum-nav-browse-menu-item span {
+    font-size: 14px;
+  }
+
+  .view-discussion-home h2.home-title {
+    font-size: 30px;
+  }
+
+  header.page-header,
+  header.page-header.has-secondary {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 2rem;
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+
+  .forum-search .search-input {
+    width: 184px;
+  }
+
+  .forum-search .search-button,
+  .discussion-submit-post {
+    border: 1px solid;
+    border-left: none;
+    border: 1px solid $gym-orange;
+    background-color: $gym-orange;
+    color: white;
+    font-family: $gym-font-stack;
+    font-weight: bold;
+    font-size: 1.2em;
+    line-height: 1;
+    text-align: center;
+
+    &:hover {
+      border: 1px solid $gym-button-background-hover;
+      background-color: $gym-button-background-hover;
+    }
+
+    &:active,
+    &:focus {
+      border: 1px solid $gym-button-background-active;
+      background-color: $gym-button-background-active;
+    }
+  }
+
+  // Add post button wrapper
+  .forum-actions {
+    margin-left: 10px;
+
+    // Add post button
+    button {
+      background-color: $gym-orange;
+      border: 1px solid $gym-orange;
+
+      &:active,
+      &:hover {
+        background-color: $gym-light-gray;
+        border: 1px solid $gym-light-gray;
+      }
+    }
+  }
+
+  .discussion-post .post-body,
+  .discussion-post .post-context,
+  .forum-nav-filter-main-control,
+  .forum-nav-sort,
+  .forum-nav-thread-title,
+  .forum-nav-thread-votes-count,
+  .forum-nav-thread-comments-count,
+  .reply-body textarea,
+  .response-body,
+  .wmd-preview-container .wmd-preview,
+  .wmd-preview-container .wmd-preview-label {
+    font-weight: normal;
+  }
+
+  a.username,
+  .actions-dropdown .action-list-item,
+  .forum-nav-filter-main-control,
+  .forum-nav-sort,
+  .posted-details {
+    font-size: 12px;
+  }
+
+  .actions-dropdown .action-list-item:hover {
+    border: none;
+    font-weight: bold;
+    color: $gym-orange;
+  }
+
+  .btn-link.action-button.action-follow,
+  .btn-link.action-button.action-follow icon,
+  .discussion-post,
+  .discussion-post .post-body,
+  .discussion-post .post-context,
+  .field-help,
+  .field-label,
+  .field-label-text,
+  .field-input-label,
+  .forum-nav-thread-title,
+  .forum-nav-thread-votes-count,
+  .forum-nav-thread-comments-count,
+  .thread-preview-body,
+  li.post-label,
+  li.post-label icon,
+  .icon,
+  input,
+  .response-count,
+  .response-body,
+  textarea,
+  .wmd-preview-container,
+  .wmd-preview-label {
+    font-size: 14px;
+  }
+}
+
+// Prevents jitter effect pre-hover
+.has-breadcrumbs .breadcrumbs .all-topics {
+  color: inherit;
+  font-size: 14px;
+  font-family: $gym-font-stack;
+  font-weight: bold;
+  border: 1px solid transparent;
+
+  // Prevents "All Topics" button becoming invisible
+  &:hover {
+    color: inherit;
+  }
+}
